fixed contrast error

--- a/lesson11/Preston/css/styles-small.css
+++ b/lesson11/Preston/css/styles-small.css
@@ -120,6 +120,7 @@ body {
     border-style: solid;
     border-color: #ffffff;
     color: #ffffff;
+    font-size: 1.2em;
     
 }
 
